--- a/Exercicios/exercicios.ipynb
+++ b/Exercicios/exercicios.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. Carregar os dados do arquivo\n",
     "import pandas as pd\n",
     "\n",
-    "# 1. Carregar os dados do arquivo\n",
     "df = pd.read_excel(\"dados_ausentes_2.xlsx\")\n",
     "\n",
     "print(df)"
@@ -16,22 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Nome  Idade        Cidade  Salário\n",
-      "0   joão   28.0            SP   3500.0\n",
-      "1  maria   35.0            rj   4500.0\n",
-      "2   josé   35.0            rj      NaN\n",
-      "3    ana   22.0      salvador   5000.0\n",
-      "4  pedro   22.0  porto alegre   4800.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Exercício: Carregar um arquivo e exibir as primeiras 5 linhas.\n",
     "print(df.head())"
@@ -76,8 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Exercício: Remover todas as linhas que contêm valores NaN em qualquer\n",
-    "coluna\n",
+    "# 5. Exercício: Remover todas as linhas que contêm valores NaN em qualquer coluna\n",
     "df_sem_nulos = df.dropna()\n",
     "print(df_sem_nulos)"
    ]
@@ -184,24 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Nome  Idade        Cidade  Salário\n",
-      "0     joão   28.0            SP   3500.0\n",
-      "1    maria   35.0            rj   4500.0\n",
-      "2     josé   35.0            rj      NaN\n",
-      "3      ana   22.0      salvador   5000.0\n",
-      "4    pedro   22.0  porto alegre   4800.0\n",
-      "6  jessica   20.0            SP   3410.0\n",
-      "7   carlos   35.0  porto alegre   2500.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 15 - Exercício: Identificar e remover valores duplicados de um DataFrame.\n",
     "df = df.drop_duplicates(subset=['Nome'])\n",
