--- a/Exercicios/exercicios.ipynb
+++ b/Exercicios/exercicios.ipynb
@@ -96,8 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. Exercício: Substituir valores NaN de uma coluna com o valor de uma outra\n",
-    "coluna.\n",
+    "# 8. Exercício: Substituir valores NaN de uma coluna com o valor de uma outra coluna.\n",
     "df['Idade'].fillna(df['Idade'].mean(), inplace=True)\n",
     "print(df)"
    ]
